Add colony selection display, improve reset functionality, remove sync indicator

--- a/index.html
+++ b/index.html
@@ -57,6 +57,14 @@
                     <button id="randomizeMap" class="btn btn-warning">🗺️ 맵 랜덤 선택</button>
                 </div>
 
+                <!-- 개척기지 표시 영역 -->
+                <div id="colonies-display" class="colonies-display hidden">
+                    <h3>🚀 선택된 개척기지</h3>
+                    <div id="colonies-list" class="colonies-list">
+                        <!-- 개척기지 목록이 여기에 표시됩니다 -->
+                    </div>
+                </div>
+
                 <div id="game-scores-container">
                     <!-- 게임 점수 입력 필드들이 동적으로 생성됩니다 -->
                 </div>
